<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".fragments.ComicDetailsFragment">

        <ImageView
            android:id="@+id/image_details_imageView"
            android:layout_width="149dp"
            android:layout_height="192dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/name_details_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:text="@string/name_details"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/image_details_imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/author_details_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/author_details"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/name_details_txt"
            app:layout_constraintTop_toBottomOf="@+id/name_details_txt" />

        <TextView
            android:id="@+id/genre_details_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/genre_details"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/author_details_txt"
            app:layout_constraintTop_toBottomOf="@+id/author_details_txt" />

        <TextView
            android:id="@+id/average_rating_details_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/average_rating_details"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/genre_details_txt"
            app:layout_constraintTop_toBottomOf="@+id/genre_details_txt" />

        <TextView
            android:id="@+id/status_details_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/status_details"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/average_rating_details_txt"
            app:layout_constraintTop_toBottomOf="@+id/average_rating_details_txt" />

        <TextView
            android:id="@+id/description_details_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="28dp"
            android:text="@string/description_details"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_details_imageView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/comic_details_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="@+id/description_details_txt"
            app:layout_constraintTop_toBottomOf="@+id/description_details_txt" />

        <EditText
            android:id="@+id/comment_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="Please input your comment"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/comment_section_profile_picture"
            app:layout_constraintTop_toBottomOf="@+id/comic_details_recyclerView" />

        <Button
            android:id="@+id/comment_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Comment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/comment_et" />

        <ImageView
            android:id="@+id/comment_section_profile_picture"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/comic_details_recyclerView"
            tools:srcCompat="@tools:sample/avatars" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/comment_recyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/comment_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>